--- a/Var5/Pages/FirstPage.razor
+++ b/Var5/Pages/FirstPage.razor
@@ -48,7 +48,7 @@ Surname
     {
         if(e.Button == 0)
         {
-            users.Add(new User(name, surname, DateTime.Now));
+            users.Add(new User(name, surname, DateTime.Now.Date));
 
             Console.WriteLine("Нажато");
         }
